--- a/Assignment8/package.json
+++ b/Assignment8/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "002763670_assignment8",
+  "name": "002748707",
   "version": "1.0.0",
   "description": "Assignment 8",
   "main": "server",
@@ -8,17 +8,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shubhamtawde/INFO6150_Web_Design_and_User_Experience_2022.git"
+    "url": "git+https://github.com/Sweta716/WebDevelopment.git"
   },
-  "author": "Shubham Tawde",
+  "author": "Sweta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shubhamtawde/INFO6150_Web_Design_and_User_Experience_2022/issues"
+    "url": "https://github.com/Sweta716/WebDevelopment.git"
   },
-  "homepage": "https://github.com/shubhamtawde/INFO6150_Web_Design_and_User_Experience_2022#readme",
+  "homepage": "https://github.com/Sweta716/WebDevelopment.git",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.2",
     "mongosh": "^1.8.0"
